correcting spacing on navbar and adding overlay for main image

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 }
 .navBar {
   font-family: ubuntu, arial, sans-serif;
-max-height: 40px;
+max-height: 80px;
 display: flex;
 flex-direction: row;
 background: linear-gradient(white, #f2f5f0);
@@ -23,7 +23,8 @@ font-weight: 600;
 padding-left: 5px;
 padding-right: 5px;
 background: linear-gradient(white, #f2f5f0);
-
+width: 350px;
+text-align:center;
 }
 .aboutUs {
   font-family: ubuntu, arial, sans-serif;
@@ -36,7 +37,7 @@ background: linear-gradient(white, #f2f5f0);
 }
 .homeButton {
   text-align: center;
-  height: 40px;
+  height: 80px;
   width: 100px;
   border-right: 2px solid #d8d9d2;
   border-left: 2px solid #d8d9d2;
@@ -44,27 +45,72 @@ background: linear-gradient(white, #f2f5f0);
   background: linear-gradient(white, #f2f5f0);
   cursor: pointer;
 }
+.homeButton p {
+  margin-top: 30px;
+}
 .galleryButton {
   text-align: center;
-  height: 40px;
+  height: 80px;
   width: 100px;
   border-right: 2px solid #d8d9d2;
   background: linear-gradient(white, #f2f5f0);
   cursor: pointer;
+}
+.galleryButton p {
+  margin-top: 30px;
 }
 .contactButton {
   text-align: center;
-  height: 40px;
+  height: 80px;
   width: 100px;
   border-right: 2px solid #d8d9d2;
   background: linear-gradient(white, #f2f5f0);
   cursor: pointer;
+  contain: content;
+  min-width: 100px;
+}
+.contactButton p {
+  margin-top: 30px;
 }
 .aboutButton {
   text-align: center;
-  height: 40px;
+  height: 80px;
   width: 100px;
 border-right: 2px solid #d8d9d2;
 background: linear-gradient(white, #f2f5f0);
 cursor: pointer;
+}
+.aboutButton p {
+  margin-top: 30px;
+}
+.outerBox {
+height: 300px;
+width: 85%;
+margin-left: auto;
+margin-right: auto;
+display: block;
+position: relative;
+margin-top: 30px;
+
+}
+.outerBox img {
+  width: 100%;
+  height: 100%;
+}
+.innerBox{
+  text-align: center;
+width: 100%;
+height: 100%;
+  font-family: ubuntu, arial, sans-serif;
+  position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 50px;
+
+
+    background-color: rgba(250,250,250,0.7);
+
+}
+.innerBox p {
+  margin-top: 140px;
 }
